--- a/config.json.example
+++ b/config.json.example
@@ -1,11 +1,12 @@
 {
 	"port": 53,
-	"host": "127.0.0.1",
+	"host": null,
 	"privileges": {
 		"user": "dns",
 		"group": "dns"
 	},
 	"request_timeout": 600,
+	"logging_requests": false,
 	"routing": [
 		{
 			"type": "A",
